production/tools/tests/gaiat/arrays_test00.ruleset
/////////////////////////////////////////////
// Copyright (c) Gaia Platform LLC
// All rights reserved.
/////////////////////////////////////////////

// RUN: not %gaiat %s -- 2>&1| FileCheck  %s

ruleset test00
{
    on_insert(farmer)
    {
        farmer.previous_years[0] = 5;
    }
}

// CHECK: error: no member named 'previous_years' in 'farmer__type'
